--- a/portfolio.html
+++ b/portfolio.html
@@ -28,15 +28,15 @@
           >
           <ul class="list menu">
             <li class="menu-item">
-              <a class="link link-nav link-padd" href="./index.html">Studio</a>
+              <a class="link link-nav" href="./index.html">Studio</a>
             </li>
             <li class="menu-item">
-              <a class="link link-nav link-padd" href="./portfolio.html"
+              <a class="link link-nav current" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
             <li class="menu-item">
-              <a class="link link-nav link-padd" href="">Contacts</a>
+              <a class="link link-nav" href="">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -78,12 +78,21 @@
           <ul class="list portf-menu">
             <li class="card portf-item">
               <a href="" class="link portf-a">
-                <img
-                  src="./images/bankapp.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/bankapp.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="product-card">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portf-item-content">
                   <h2 class="portf-titles">Banking App Interface Concept</h2>
                   <p class="description">App</p>
@@ -92,12 +101,22 @@
             </li>
             <li class="card portf-item">
               <a href="" class="link portf-a">
-                <img
-                  src="./images/qr-code.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/qr-code.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="product-card">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+
                 <div class="portf-item-content">
                   <h2 class="portf-titles">Cashless Payment</h2>
                   <p class="description">Marketing</p>
@@ -106,11 +125,21 @@
             </li>
             <li class="card portf-item">
               <a href="" class="link portf-a">
-                <img
-                  src="./images/normalcy.jpg"
-                  alt="Meditation App"
-                  width="360"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/normalcy.jpg"
+                    alt="Meditation App"
+                    width="360"
+                  />
+                  <div class="product-card">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+
                 <div class="portf-item-content">
                   <h2 class="portf-titles">Meditation App</h2>
                   <p class="description">App</p>
@@ -119,11 +148,21 @@
             </li>
             <li class="card portf-item">
               <a href="" class="link portf-a">
-                <img
-                  src="./images/navigator.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/navigator.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                  />
+                  <div class="product-card">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+
                 <div class="portf-item-content">
                   <h2 class="portf-titles">Taxi Service</h2>
                   <p class="description">Marketing</p>
@@ -132,11 +171,21 @@
             </li>
             <li class="card portf-item">
               <a href="" class="link portf-a">
-                <img
-                  src="./images/phone.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/phone.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                  />
+                  <div class="product-card">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+
                 <div class="portf-item-content">
                   <h2 class="portf-titles">Screen Illustrations</h2>
                   <p class="description">Design</p>
@@ -145,7 +194,21 @@
             </li>
             <li class="card portf-item">
               <a href="" class="link portf-a">
-                <img src="./images/girl.jpg" alt="Online Courses" width="360" />
+                <div class="overlay">
+                  <img
+                    src="./images/girl.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
+                  <div class="product-card">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+
                 <div class="portf-item-content">
                   <h2 class="portf-titles">Online Courses</h2>
                   <p class="description">Marketing</p>
@@ -154,11 +217,21 @@
             </li>
             <li class="card portf-item">
               <a href="" class="link portf-a">
-                <img
-                  src="./images/make-everything.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/make-everything.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                  />
+                  <div class="product-card">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+
                 <div class="portf-item-content">
                   <h2 class="portf-titles">Instagram Stories Concept</h2>
                   <p class="description">Design</p>
@@ -167,11 +240,21 @@
             </li>
             <li class="card portf-item">
               <a href="" class="link portf-a">
-                <img
-                  src="./images/shopping.jpg"
-                  alt="Organic Food"
-                  width="360"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/shopping.jpg"
+                    alt="Organic Food"
+                    width="360"
+                  />
+                  <div class="product-card">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+
                 <div class="portf-item-content">
                   <h2 class="portf-titles">Organic Food</h2>
                   <p class="description">Web Site</p>
@@ -180,7 +263,21 @@
             </li>
             <li class="card portf-item">
               <a href="" class="link portf-a">
-                <img src="./images/coffee.jpg" alt="Fresh Coffee" width="360" />
+                <div class="overlay">
+                  <img
+                    src="./images/coffee.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                  />
+                  <div class="product-card">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+
                 <div class="portf-item-content">
                   <h2 class="portf-titles">Fresh Coffee</h2>
                   <p class="description">Web Site</p>
