--- a/index.html
+++ b/index.html
@@ -28,15 +28,13 @@
           >
           <ul class="list menu">
             <li class="menu-item">
-              <a class="link link-nav link-padd" href="./index.html">Studio</a>
+              <a class="link link-nav current" href="./index.html">Studio</a>
             </li>
             <li class="menu-item">
-              <a class="link link-nav link-padd" href="./portfolio.html"
-                >Portfolio</a
-              >
+              <a class="link link-nav" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="menu-item">
-              <a class="link link-nav link-padd" href="">Contacts</a>
+              <a class="link link-nav" href="">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -62,8 +60,12 @@
       <!-- Button -->
       <section class="main-first-section">
         <div class="container first-section">
-          <h1 class="main-headline">Effective Solutions for Your Business</h1>
-          <button type="button" class="btn">Order Service</button>
+          <div class="main-h-position">
+            <h1 class="main-headline">Effective Solutions for Your Business</h1>
+          </div>
+          <button type="button" class="btn" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
 
@@ -558,5 +560,16 @@
         </div>
       </div>
     </footer>
+    <!-- Modal window -->
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close-btn" data-modal-close>
+          <svg class="" width="8" height="8">
+            <use href="./images/icon.svg#icon-close-btn"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
