Mistakes were fixed

--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
-          <svg class="" width="8" height="8">
+          <svg class="drop-icon" width="8" height="8">
             <use href="./images/icon.svg#icon-close-btn"></use>
           </svg>
         </button>
