Bottom-fl changed

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
     <!-- Підвал -->
     <footer class="footer bottom">
       <div class="container bottom-fl">
-        <div>
+        <div class="bottom-fl-item">
           <a href="./index.html" class="link logo-web logo-footer"
             >Web<span class="logo-st-bottom">Studio</span></a
           >
